Refactor: code cleanup

--- a/milet/mem_cpu_graphs.ipynb
+++ b/milet/mem_cpu_graphs.ipynb
@@ -146,7 +146,7 @@
    "source": [
     "df = \"./data/mem_cpu_ten.csv\"\n",
     "\n",
-    "names = ['env', 'cpu_percentage',\t'memory_percentage', 'memory_usage', 'net_io', 'block_io', 'pids', 'timestamp']\n",
+    "names = ['env', 'cpu_percentage', 'memory_percentage', 'memory_usage', 'net_io', 'block_io', 'pids', 'timestamp']\n",
     "df = pd.read_csv(df, header=None, names=names, delimiter=';')\n",
     "\n",
     "df.head()"
@@ -299,6 +299,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Creating time_elapsed field to plot better graphics\n",
+    "\n",
+    "Without this field, it would be impossible to overlap the lines of each test, because each test happened sequentially.\n",
+    "It was also necessary to remove any log where cpu utilization was less than 1% because these idle stretches represent the moments when the runtime wasn't being tested."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 105,
    "metadata": {},
@@ -439,9 +449,9 @@
     "bun_min = filtered_df[filtered_df['env'] == 'bun']['timestamp'].min()\n",
     "deno_min = filtered_df[filtered_df['env'] == 'deno']['timestamp'].min()\n",
     "\n",
-    "print(\"Início do teste de node:\", node_min)\n",
-    "print(\"Início do teste de bun:\", bun_min)\n",
-    "print(\"Início do teste de deno:\", deno_min)\n",
+    "print(\"Start time - node test:\", node_min)\n",
+    "print(\"Start time - bun test:\", bun_min)\n",
+    "print(\"Start time - deno test:\", deno_min)\n",
     "\n",
     "def determine_time_elapsed(start, timestamp):\n",
     "    return (timestamp - start).seconds\n",
@@ -520,7 +530,7 @@
     }
    ],
    "source": [
-    "plot_line(filtered_df, 'time_elapsed', 'memory_percentage', 'env', 'Tempo decorrido desde o início do teste em segundos', 'Porcentagem de utilização de memória')\n"
+    "plot_line(filtered_df, 'time_elapsed', 'memory_percentage', 'env', 'Tempo decorrido desde o início do teste em segundos', 'Porcentagem de utilização de memória')"
    ]
   }
  ],
