--- a/milet/mem_cpu_graphs.ipynb
+++ b/milet/mem_cpu_graphs.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        "4  0B / 4.1kB    23  21:24:53  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "4  192MB / 1.02GB  0B / 4.1kB    23 1900-01-01 21:24:53  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,16 +310,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Início do teste de node: 1900-01-01 21:24:50\n",
-      "Início do teste de bun: 1900-01-01 21:30:52\n",
-      "Início do teste de deno: 1900-01-01 21:36:51\n"
+      "Start time - node test: 1900-01-01 21:24:50\n",
+      "Start time - bun test: 1900-01-01 21:30:52\n",
+      "Start time - deno test: 1900-01-01 21:36:51\n"
      ]
     },
     {
@@ -435,7 +435,7 @@
        "13  196MB / 1.04GB  0B / 4.1kB    23 1900-01-01 21:25:02            12  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
