Feat: test context segmentation and docstrings

--- a/milet/latency_requests_throughput_graphs.ipynb
+++ b/milet/latency_requests_throughput_graphs.ipynb
@@ -403,11 +403,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot(df: pd.DataFrame, x: str, y: str, hue: str, x_label: str, y_label: str):\n",
+    "    \"\"\"\n",
+    "    Plots a bar graph using data from the given dataframe.\n",
+    "    \n",
+    "    Receives:\n",
+    "        df: Dataframe\n",
+    "        x: str (df column name to be plotted agains the x-axis)\n",
+    "        y: str (df column name to be plotted agains the y-axis)\n",
+    "        hue: str (df column name to distinguish different bars by color)\n",
+    "        x_label: str (displayed as the label for x-axis)\n",
+    "        y_label: str (displayed as the label for y-axis)\n",
+    "    \"\"\"\n",
     "    plt.figure(figsize = (14, 7))\n",
     "    fig = sns.barplot(df, x=x, y=y, hue=hue)\n",
     "    for i in fig.containers:\n",
